--- a/notebooks/Problema 1/3. Preparación.ipynb
+++ b/notebooks/Problema 1/3. Preparación.ipynb
@@ -180,7 +180,7 @@
     }
    ],
    "source": [
-    "df_original = pd.read_csv('Datasets/listings_summary.csv')\n",
+    "df_original = pd.read_csv('../Datasets/listings_summary.csv')\n",
     "df_original.head(2)"
    ]
   },
@@ -269,15 +269,14 @@
     "                \"interaction\",\n",
     "                \"house_rules\",\n",
     "                \"host_about\",\n",
+    "                \"license\",\n",
     "               ]\n",
     "\n",
     "for column in has_a_columns:\n",
     "    df[\"has_a_\"+column] = df[column].where(df[column].isnull(), other=1)\n",
     "    df[\"has_a_\"+column].fillna(0, inplace = True)\n",
     "    df[\"has_a_\"+column] = pd.to_numeric(df[\"has_a_\"+column],errors='raise')\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "\n",
     "\n",
     "df.drop(columns=has_a_columns, inplace = True)"
    ]
@@ -313,6 +312,29 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#limpieza final y sinteticas de fecha\n",
+    "\n",
+    "\n",
+    "for column in df.columns:\n",
+    "    if df[column].dtype == \"int\" or df[column].dtype == \"float\":\n",
+    "        df[column].fillna(0, inplace = True)\n",
+    "    elif df[column].dtype == (object):\n",
+    "        df[column].fillna(\"Sin dato\", inplace = True)\n",
+    "        exclude_columns.append(column)\n",
+    "    elif df[column].dtype == \"bool\":\n",
+    "        df[column].fillna(False, inplace = True)\n",
+    "    else :\n",
+    "        df[column+'_year'] = df[column].dt.year \n",
+    "        df[column+'_month'] = df[column].dt.month \n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -320,21 +342,21 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 22552 entries, 0 to 22551\n",
-      "Data columns (total 71 columns):\n",
-      "name                                22493 non-null object\n",
+      "Data columns (total 77 columns):\n",
+      "name                                22552 non-null object\n",
       "experiences_offered                 22552 non-null object\n",
       "host_since                          22526 non-null datetime64[ns]\n",
-      "host_response_time                  9658 non-null object\n",
+      "host_response_time                  22552 non-null object\n",
       "host_response_rate                  22552 non-null float64\n",
-      "host_acceptance_rate                0 non-null float64\n",
-      "host_is_superhost                   22526 non-null float64\n",
-      "host_total_listings_count           22526 non-null float64\n",
-      "host_has_profile_pic                22526 non-null float64\n",
-      "host_identity_verified              22526 non-null float64\n",
+      "host_acceptance_rate                22552 non-null float64\n",
+      "host_is_superhost                   22552 non-null float64\n",
+      "host_total_listings_count           22552 non-null float64\n",
+      "host_has_profile_pic                22552 non-null float64\n",
+      "host_identity_verified              22552 non-null float64\n",
       "neighbourhood_cleansed              22552 non-null object\n",
       "neighbourhood_group_cleansed        22552 non-null object\n",
-      "city                                22547 non-null object\n",
-      "state                               22468 non-null object\n",
+      "city                                22552 non-null object\n",
+      "state                               22552 non-null object\n",
       "country                             22552 non-null object\n",
       "latitude                            22552 non-null float64\n",
       "longitude                           22552 non-null float64\n",
@@ -342,11 +364,11 @@
       "property_type                       22552 non-null object\n",
       "room_type                           22552 non-null object\n",
       "accommodates                        22552 non-null int64\n",
-      "bathrooms                           22520 non-null float64\n",
-      "bedrooms                            22534 non-null float64\n",
-      "beds                                22512 non-null float64\n",
+      "bathrooms                           22552 non-null float64\n",
+      "bedrooms                            22552 non-null float64\n",
+      "beds                                22552 non-null float64\n",
       "bed_type                            22552 non-null object\n",
-      "square_feet                         446 non-null float64\n",
+      "square_feet                         22552 non-null float64\n",
       "price                               22552 non-null float64\n",
       "weekly_price                        22552 non-null float64\n",
       "monthly_price                       22552 non-null float64\n",
@@ -365,23 +387,22 @@
       "number_of_reviews                   22552 non-null int64\n",
       "first_review                        18638 non-null datetime64[ns]\n",
       "last_review                         18644 non-null datetime64[ns]\n",
-      "review_scores_rating                18163 non-null float64\n",
-      "review_scores_accuracy              18138 non-null float64\n",
-      "review_scores_cleanliness           18141 non-null float64\n",
-      "review_scores_checkin               18120 non-null float64\n",
-      "review_scores_communication         18134 non-null float64\n",
-      "review_scores_location              18121 non-null float64\n",
-      "review_scores_value                 18117 non-null float64\n",
+      "review_scores_rating                22552 non-null float64\n",
+      "review_scores_accuracy              22552 non-null float64\n",
+      "review_scores_cleanliness           22552 non-null float64\n",
+      "review_scores_checkin               22552 non-null float64\n",
+      "review_scores_communication         22552 non-null float64\n",
+      "review_scores_location              22552 non-null float64\n",
+      "review_scores_value                 22552 non-null float64\n",
       "requires_license                    22552 non-null int64\n",
-      "license                             1638 non-null object\n",
-      "jurisdiction_names                  0 non-null float64\n",
+      "jurisdiction_names                  22552 non-null float64\n",
       "instant_bookable                    22552 non-null int64\n",
       "is_business_travel_ready            22552 non-null int64\n",
       "cancellation_policy                 22552 non-null object\n",
       "require_guest_profile_picture       22552 non-null int64\n",
       "require_guest_phone_verification    22552 non-null int64\n",
       "calculated_host_listings_count      22552 non-null int64\n",
-      "reviews_per_month                   18638 non-null float64\n",
+      "reviews_per_month                   22552 non-null float64\n",
       "has_a_summary                       22552 non-null int64\n",
       "has_a_space                         22552 non-null int64\n",
       "has_a_description                   22552 non-null int64\n",
@@ -392,8 +413,15 @@
       "has_a_interaction                   22552 non-null int64\n",
       "has_a_house_rules                   22552 non-null int64\n",
       "has_a_host_about                    22552 non-null int64\n",
-      "dtypes: datetime64[ns](3), float64(27), int64(27), object(14)\n",
-      "memory usage: 12.2+ MB\n"
+      "has_a_license                       22552 non-null int64\n",
+      "host_since_year                     22526 non-null float64\n",
+      "host_since_month                    22526 non-null float64\n",
+      "first_review_year                   18638 non-null float64\n",
+      "first_review_month                  18638 non-null float64\n",
+      "last_review_year                    18644 non-null float64\n",
+      "last_review_month                   18644 non-null float64\n",
+      "dtypes: datetime64[ns](3), float64(33), int64(28), object(13)\n",
+      "memory usage: 13.2+ MB\n"
      ]
     }
    ],
@@ -403,12 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# guardar data preparada\n",
-    "df.to_csv(\"data_preparada.csv\")"
+    "df.to_csv(\"data_preparada.csv\",index = False)"
    ]
   },
   {
